<resources>
    <string name="app_name">HomeCreditBank</string>
    <string name="search_hint">Поиск</string>
    <string name="current_balance">Текущий баланс</string>
    <string name="example_balance">500 000 ₸</string>
    <string name="example_card_number">5282 3456 7890 1289</string>
    <string name="example_card_expiration">09/25</string>
    <string name="shop">Магазин</string>
    <string name="scan">Отсканировать</string>
    <string name="help">Помощь</string>
    <string name="history">История покупок</string>
    <string name="active_orders">Активные заявки</string>
    <string name="settings">Настройки</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="register">Регистрация</string>
    <string name="scan_barcode">Отсканировать штрих-код</string>
    <string name="banner_description">Заходи в магазин и бери все что хочешь в рассрочку с Home Credit Bank</string>
    <string name="issue_now">Оформить сейчас</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="password_hint">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="product_example_title">Купить Iphone 13</string>
    <string name="product_example_price">от 399 000 ₸</string>
    <string name="features">Характеристики</string>
    <string name="new_product">Новинка!</string>
    <string name="shop_example_name">Sulpak</string>
    <string name="go_to_shop">Перейти в магазин</string>
    <string name="product_price">Стоимость товара</string>
    <string name="monthly_pay">Ежемесячный платеж</string>
    <string name="request">Запросить одобрение</string>
    <string name="decision_awaiting_text">Мы принимаем решение…</string>
    <string name="decision_awaiting_description">Это может занять несколько минут</string>
    <string name="application_success_title">Вам одобрили кредит</string>
    <string name="application_success_description">Заберите товар в пункте выдачи</string>
    <string name="application_success_action_button">Показать чек</string>
    <string name="application_failure_title">К сожалению, вам отказано!</string>
    <string name="application_failure_action_button">Главное меню</string>
    <string name="main_page">главное меню</string>
    <string name="account">Аккаунт</string>
</resources>