<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_preloader_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="12dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_primary_background"
        android:digits="1234567890 -.+()"
        android:fontFamily="@font/roboto"
        android:hint="@string/phone_number_hint"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_primary_background"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_secondary_background"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="24dp"
        android:background="@drawable/register_button_background"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>