<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_preloader_background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/application_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/decision_awaiting_text"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/application_status_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        tools:srcCompat="@drawable/ic_success" />

    <TextView
        android:id="@+id/application_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/decision_awaiting_description"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_secondary_background"
        android:fontFamily="@font/roboto_medium"
        android:paddingHorizontal="12dp"
        android:text="@string/go_to_shop"
        android:textColor="@color/white"
        android:textSize="12sp" />

</LinearLayout>